# fhspyenv

./: .envrc  flake.nix  notebook.ipynb  pyproject.toml  shell.nix
